re PR c++/36816 ([c++0x] error deducing template argument taking the address of rvalue reference template)

PR c++/36816
	* pt.c (maybe_adjust_types_for_deduction): Do rvalue ref adjustment
	even when DEDUCE_EXACT.

From-SVN: r152565